fix: styles for nav bar on mobile devices to be on whole screen

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -103,6 +103,11 @@ $min-width-to-show-hamburger: 600px;
   @media only screen and (max-width: 600px) {
     transition: left 0.5s ease-in-out;
     left: -120%;
+    background-color: hsla(0, 0%, 0%, 0.7);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     &.active {
       left: 0;
@@ -122,7 +127,6 @@ $min-width-to-show-hamburger: 600px;
       flex-direction: column;
       height: initial;
       padding: 1rem 0;
-      background-color: #00000080;
     }
 
     .navigation__hamburger {
